--- a/server/apps/cli/pom.xml
+++ b/server/apps/cli/pom.xml
@@ -111,6 +111,16 @@
                             <mainClass>org.apache.james.cli.ServerCmd</mainClass>
                             <useUniqueVersions>false</useUniqueVersions>
                         </manifest>
+                        <manifestEntries>
+                            <Specification-Title>Apache James CLI Application</Specification-Title>
+                            <Specification-Version>${project.version}</Specification-Version>
+                            <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
+                            <Implementation-Title>Apache James CLI Application</Implementation-Title>
+                            <Implementation-Version>${project.version}</Implementation-Version>
+                            <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
+                            <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
+                            <url>https://james.apache.org/server</url>
+                        </manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
