--- a/server/apps/memory-app/pom.xml
+++ b/server/apps/memory-app/pom.xml
@@ -376,6 +376,16 @@
                                     <mainClass>org.apache.james.MemoryJamesServerMain</mainClass>
                                     <useUniqueVersions>false</useUniqueVersions>
                                 </manifest>
+                                <manifestEntries>
+                                    <Specification-Title>Apache James Memory server Application</Specification-Title>
+                                    <Specification-Version>${project.version}</Specification-Version>
+                                    <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
+                                    <Implementation-Title>Apache James Memory server Application</Implementation-Title>
+                                    <Implementation-Version>${project.version}</Implementation-Version>
+                                    <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
+                                    <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
+                                    <url>https://james.apache.org/server</url>
+                                </manifestEntries>
                             </archive>
                         </configuration>
                     </execution>
