[SCALA_CHECKSTYLE] DisableSyntax,DisableSyntax,ProcedureSyntax,NoValInForComprehension,LeakingImplicitClassVal
fixup! [SCALA_CHECKSTYLE] RemoveUnused

Not yet support

--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -1,5 +1,8 @@
 rules = [
-    RemoveUnused
+    DisableSyntax,
+    ProcedureSyntax,
+    NoValInForComprehension,
+    LeakingImplicitClassVal
 ]
 
 RemoveUnused.imports = true
@@ -7,3 +10,17 @@ RemoveUnused.privates = false
 RemoveUnused.locals = true
 RemoveUnused.patternvars = false
 RemoveUnused.implicits = false
+
+DisableSyntax.noVars = false
+DisableSyntax.noThrows = false
+DisableSyntax.noNulls = false
+DisableSyntax.noReturns = false
+DisableSyntax.noWhileLoops = false
+DisableSyntax.noAsInstanceOf = false
+DisableSyntax.noIsInstanceOf = false
+DisableSyntax.noXml = false
+DisableSyntax.noDefaultArgs = false
+DisableSyntax.noFinalVal = true
+DisableSyntax.noFinalize = true
+DisableSyntax.noValPatterns = false
+DisableSyntax.noUniversalEquality = false
