JAMES-2435 Exemple for SMTP hooks

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -33,6 +33,7 @@
   <modules>
     <module>custom-listeners</module>
     <module>custom-mailets</module>
+    <module>custom-smtp-hooks</module>
   </modules>
   <properties>
     <james.groupId>org.apache.james</james.groupId>
