--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -25,21 +25,25 @@
     <version>23</version>
     <relativePath />
   </parent>
+
   <groupId>org.apache.james.examples</groupId>
   <artifactId>examples</artifactId>
   <version>3.7.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Apache James :: Examples</name>
-  <modules>
-    <module>custom-listeners</module>
-    <module>custom-mailets</module>
-    <module>custom-smtp-command</module>
-    <module>custom-smtp-hooks</module>
-  </modules>
+
   <properties>
     <james.groupId>org.apache.james</james.groupId>
     <james.baseVersion>${project.version}</james.baseVersion>
     <maven.compiler.target>1.11</maven.compiler.target>
     <maven.compiler.source>1.11</maven.compiler.source>
   </properties>
+
+  <modules>
+    <module>custom-listeners</module>
+    <module>custom-mailets</module>
+    <module>custom-smtp-command</module>
+    <module>custom-smtp-hooks</module>
+    <module>custom-webadmin-route</module>
+  </modules>
 </project>
