--- a/server/pom.xml
+++ b/server/pom.xml
@@ -101,6 +101,7 @@
         <module>protocols/protocols-lmtp</module>
         <module>protocols/protocols-managesieve</module>
         <module>protocols/protocols-pop3</module>
+        <module>protocols/protocols-pop3-distributed</module>
         <module>protocols/protocols-smtp</module>
         <module>protocols/webadmin</module>
         <module>protocols/webadmin-integration-test</module>
