JAMES-3623 Webadmin endpoints for task to fix POP3 projection

--- a/server/protocols/webadmin/pom.xml
+++ b/server/protocols/webadmin/pom.xml
@@ -44,6 +44,7 @@
         <module>webadmin-mailbox-deleted-message-vault</module>
         <module>webadmin-mailqueue</module>
         <module>webadmin-mailrepository</module>
+        <module>webadmin-pop3</module>
         <module>webadmin-rabbitmq</module>
         <module>webadmin-swagger</module>
     </modules>
