--- a/server/pom.xml
+++ b/server/pom.xml
@@ -42,6 +42,7 @@
         <module>apps/cli</module>
         <module>apps/cli-integration-tests</module>
         <module>apps/distributed-app</module>
+        <module>apps/distributed-pop3-app</module>
         <module>apps/jpa-app</module>
         <module>apps/jpa-smtp-app</module>
         <module>apps/memory-app</module>
