--- a/server/container/guice/pom.xml
+++ b/server/container/guice/pom.xml
@@ -34,6 +34,7 @@
 
     <modules>
         <module>blob/api</module>
+        <module>blob/deduplication-gc</module>
         <module>blob/export</module>
         <module>blob/memory</module>
         <module>blob/s3</module>
@@ -82,6 +83,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
+                <artifactId>blob-deduplication-gc-guice</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>${james.groupId}</groupId>
                 <artifactId>data-cassandra</artifactId>
