JAMES-3647 Adopt eclipse-temurin:11-jre-focal docker image
DEPRECATION NOTICE of adoptopenjdk:

This image is officially deprecated in favor of the eclipse-temurin image,
and will receive no further updates after 2021-08-01 (Aug 01, 2021). Please
adjust your usage accordingly.

--- a/server/apps/distributed-app/pom.xml
+++ b/server/apps/distributed-app/pom.xml
@@ -396,7 +396,7 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
                     <from>
-                        <image>adoptopenjdk:11-jdk-hotspot</image>
+                        <image>eclipse-temurin:11-jre-focal</image>
                     </from>
                     <to>
                         <image>apache/james</image>
