--- a/mailet/test/pom.xml
+++ b/mailet/test/pom.xml
@@ -24,7 +24,7 @@
         <groupId>org.apache.james</groupId>
         <artifactId>apache-mailet</artifactId>
         <version>3.7.0-SNAPSHOT</version>
-        <relativePath>../</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>apache-mailet-test</artifactId>
